# AWET

./: (AAPL) ===')  .dockerignore  .env.example  .gitignore  0  AGENTS.md  Dockerfile.agent  GAP_AUDIT_REPORT.md  LLM_SETUP.md  Makefile  OPERATIONS.md  PERF.md  README.md  RUNBOOK_LOCAL.md  SYSTEM_STATUS.md  _tft has {len(rows)} columns:')  advanced_ai_engine.py  advanced_alerts.py  aggressive_day_trader.py  alert_system.py  automated_portfolio.json  automated_trader.py  dashboard.py  day_trading_portfolio.json  docker-compose.prod.yml  docker-compose.yml  e N=500 DAYS=60  execute_trading_now.py  full_pipeline.py  live_demo.py  live_streaming_dashboard.py  mock_agent.py  multi_strategy.py  nvidia_30min_prediction.py  prediction_agent.py  prediction_monitor.py  pyproject.toml  ql -h localhost -p 5433 -U awet -d awet -t -c SELECT column_name FROM information_schema.columns WHERE table_name = 'features_tft' ORDER BY ordinal_position;  ql -h localhost -p 5433 -U awet -d awet -t -c SELECT ticker, COUNT(DISTINCT ts::date), ROUND(AVG(volume)::numeric,0) FROM market_raw_minute GROUP BY ticker ORDER BY 3 DESC;  run_telegram_bot_local.py  (+12 more)
alertmanager/: config.yml
config/: app.yaml  kafka.yaml  limits.yaml  llm.yaml  logging.yaml  market_data.yaml  universe.csv
db/: init.sql
deploy/: CLOUD_DEPLOYMENT.md  Dockerfile  awet-ops.service  awet-ops.timer
directives/: _template.md  awet_e2e_demo.md  live_daily_ingestion.md  superagi_orchestration.md  trading_pipeline.md
docs/: AWET_PROJECT_OVERVIEW.md  AWET_STATUS_REPORT.md  NEXT_STEPS.md
execution/: backfill_polygon.py  backfill_reddit.py  create_superagi_agent.py  demo.py  explain_run.py  generate_plan.py  register_superagi_tools.py  run_live_ingestion.py  test_llm.py  verify_db.py  yfinance_backfill.py
(+351 files in other folders)
